fix(waves): render behind notch

--- a/src/app.css
+++ b/src/app.css
@@ -85,6 +85,8 @@
   html,
   body {
     font-family: Raleway, sans-serif;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
   }
 }
 
